k8s-app/atlantis-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis-demo
  labels:
    app: atlantis-demo
spec:
  type: ClusterIP
  selector:
    app: atlantis-demo
  ports:
    - port: 4141
      targetPort: 4141
      protocol: TCP
